Version 64 	 2010-09-30 	 Backup github and bitbucket to sourceforge 
Version 63 	 2010-09-17 	 Chaning time of dropbox cron to let the mysql backup finish 
Version 62 	 2010-09-15 	 Fixing path issue in drpbox backup script 
Version 61 	 2010-09-15 	 Added script to backup to dropbox 
Version 60 	 2010-09-09 	 Fixing Birthday reminedrs issue 
Version 59 	 2010-09-07 	 Adding refresh planet to crontab 
Version 58 	 2010-09-06 	 Adding blogs-planet to repos 
Version 57 	 2010-08-31 	 Changing github url 
Version 56 	 2010-08-30 	 Backup hg repos to github.com using hg-git 
Version 55 	 2010-08-23 	 Changing Greetings app 
Version 54 	 2010-08-10 	 Changing VERSION to version.py to make imports easier 
Version 53 	 2010-08-09 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Version 52 	 2010-08-09 	 added pysis to backups 
Version 51 	 2010-08-09 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Version 50 	 2010-07-30 	 Fixing issue with fill_boost_cache.sh 
Version 49 	 2010-08-09 	 Small Changes 
Version 48 	 2010-07-28 	 Delete http_proxy 
Version 47 	 2010-07-16 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Version 46 	 2010-07-16 	 Change to push_drupal_to_bitbucket.sh 
Version 45 	 2010-07-16 	 Automated merge with ssh://hg@bitbucket.org/dkmurthy/scripty 
Version 44 	 2010-07-16 	 Small cleanup to mercurial/sync_mercurial_repos.sh 
Version 43 	 2010-07-16 	 Adding BASH_ENV variable to crontab 
Version 42 	 2010-07-16 	 Automated merge with ssh://bitbucket.org/dkmurthy/scripty 
Version 41 	 2010-07-15 	 Added crontab entry to sync mercurial repos in LAN 
Version 40 	 2010-07-15 	 Added fetch_vidyalaya_active_directory_repo.sh 
Version 39 	 2010-07-15 	 Cleanup of update_redmine_on_server.sh script 
Version 38 	 2010-07-15 	 Cleanup of run_apps_when_online.sh 
Version 37 	 2010-07-15 	 Added hgsync alias 
Version 36 	 2010-07-15 	 Adding vidyalaya-active-directory back to the list of repos 